fixed sidebar padding on mobile

--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -127,7 +127,8 @@
     
     .social{
      display:none;
-
     }
-  
+    .sidenav .middle {
+      padding-left:8%;
+    } 
   }
